# discord-slack-bot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  utils.py
interfaces/: discord_interface.py  slack_interface.py
models/: mapping.py
settings/: config.py
